parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IMPORT
    MAIN
    NEW
    PACKAGE
    PI
    POW
    PRINT
    WHILE
    XCENTAGE

Grammar

Rule 0     S' -> program
Rule 1     program -> repeatLines
Rule 2     value -> INT
Rule 3     value -> FLOAT
Rule 4     value -> STR
Rule 5     value -> ID
Rule 6     repeatLines -> line
Rule 7     repeatLines -> line repeatLines
Rule 8     line -> ID EQUALSVAR value
Rule 9     line -> stamentFor
Rule 10    line -> consulta
Rule 11    line -> push
Rule 12    line -> funcion
Rule 13    line -> array
Rule 14    line -> slice
Rule 15    line -> mathExpProd
Rule 16    line -> CASE INT TWODOTS line
Rule 17    line -> switch
Rule 18    line -> pila
Rule 19    line -> func_declaration
Rule 20    line -> ID EQUALSVAR INT
Rule 21    line -> retorno
Rule 22    line -> declaration
Rule 23    line -> sentence
Rule 24    line -> return
Rule 25    line -> defer_statement
Rule 26    line -> case_statements
Rule 27    line -> constant_declaration
Rule 28    line -> list_function
Rule 29    retorno -> ID
Rule 30    retorno -> ID COMMA
Rule 31    retorno -> RETURN retorno
Rule 32    expression -> ID comparator ID
Rule 33    expression -> ID comparator INT
Rule 34    expression -> ID
Rule 35    expression -> list_function comparator INT
Rule 36    expression -> list_function comparator ID
Rule 37    comparator -> COMPARE
Rule 38    comparator -> MORETHAN
Rule 39    comparator -> MINUSTHAN
Rule 40    operator -> DIVIDE
Rule 41    operator -> MINUS
Rule 42    operator -> PLUS
Rule 43    operator -> TIMES
Rule 44    stamentFor -> FOR ID EQUALS INT DOTCOMA ID MINUSTHAN LEN LPAREN ID RPAREN DOTCOMA ID PLUS PLUS LCURLY repeatLines RCURLY
Rule 45    switch -> SWITCH ID LCURLY repeatLines RCURLY
Rule 46    consulta -> IF expression LCURLY statements RCURLY
Rule 47    consulta -> IF expression LCURLY statements RCURLY ELSE LCURLY statements RCURLY
Rule 48    statements -> statement
Rule 49    statements -> statement COMMA statements
Rule 50    statement -> ID
Rule 51    statement -> sentence
Rule 52    number -> INT
Rule 53    number -> FLOAT
Rule 54    array -> ID EQUALSVAR LBRACKETS INT RBRACKETS ID LCURLY elemArray RCURLY
Rule 55    elemArray -> number
Rule 56    elemArray -> number COMMA elemArray
Rule 57    slice -> ID EQUALSVAR LBRACKETS RBRACKETS ID LCURLY elemSlice RCURLY
Rule 58    elemSlice -> number
Rule 59    elemSlice -> number COMMA elemSlice
Rule 60    pila -> TYPE STACK LBRACKETS RBRACKETS ID
Rule 61    pila -> TYPE STACK INTERFACE LCURLY RCURLY
Rule 62    pila -> TYPE STACK STRUCT LCURLY ID LBRACKETS RBRACKETS value RCURLY
Rule 63    push -> FUNC PUSH LPAREN ID STACK COMMA ID ID RPAREN STACK LCURLY RETURN APPEND LPAREN ID COMMA ID RPAREN RCURLY
Rule 64    funcion -> FUNC value LPAREN RPAREN ID LCURLY repeatLines RETURN ID RCURLY
Rule 65    func_declaration -> FUNC ID LPAREN RPAREN LPAREN return_types RPAREN LCURLY repeatLines RCURLY
Rule 66    return_types -> ID COMMA ID
Rule 67    return_types -> ID
Rule 68    funcion -> FUNC ID LPAREN param_list RPAREN ID LCURLY repeatLines RETURN ID RCURLY
Rule 69    param_list -> param
Rule 70    param_list -> param_list COMMA param
Rule 71    param -> value ID
Rule 72    list_function -> ID LPAREN param_list RPAREN
Rule 73    list_function -> LEN LPAREN ID RPAREN
Rule 74    declaration -> VAR ID ID
Rule 75    declaration -> VAR ID ID EQUALSVAR number
Rule 76    declaration -> VAR ID ID EQUALSVAR STR
Rule 77    mathExp -> number
Rule 78    mathExp -> number operator number
Rule 79    mathExpProd -> mathExp
Rule 80    mathExpProd -> mathExp operator mathExpProd
Rule 81    sentence -> FMT PERIOD PRINTLN LPAREN arguments RPAREN
Rule 82    sentence -> FMT PERIOD PRINTF LPAREN arguments RPAREN
Rule 83    argument -> STR
Rule 84    argument -> ID
Rule 85    arguments -> argument
Rule 86    arguments -> argument COMMA arguments
Rule 87    return -> RETURN expression
Rule 88    return -> RETURN INT
Rule 89    return -> RETURN sentence
Rule 90    case_statements -> CASE INT TWODOTS line
Rule 91    case_statements -> CASE INT TWODOTS line case_statements
Rule 92    case_statements -> DEFAULT TWODOTS line
Rule 93    defer_statement -> DEFER line
Rule 94    constant_declaration -> CONST variablenum
Rule 95    variablenum -> ID EQUALS number

Terminals, with rules where they appear

APPEND               : 63
CASE                 : 16 90 91
COMMA                : 30 49 56 59 63 63 66 70 86
COMPARE              : 37
CONST                : 94
DEFAULT              : 92
DEFER                : 93
DIVIDE               : 40
DOTCOMA              : 44 44
ELSE                 : 47
EQUALS               : 44 95
EQUALSVAR            : 8 20 54 57 75 76
FLOAT                : 3 53
FMT                  : 81 82
FOR                  : 44
FUNC                 : 63 64 65 68
ID                   : 5 8 20 29 30 32 32 33 34 36 44 44 44 44 45 50 54 54 57 57 60 62 63 63 63 63 63 64 64 65 66 66 67 68 68 68 71 72 73 74 74 75 75 76 76 84 95
IF                   : 46 47
IMPORT               : 
INT                  : 2 16 20 33 35 44 52 54 88 90 91
INTERFACE            : 61
LBRACKETS            : 54 57 60 62
LCURLY               : 44 45 46 47 47 54 57 61 62 63 64 65 68
LEN                  : 44 73
LPAREN               : 44 63 63 64 65 65 68 72 73 81 82
MAIN                 : 
MINUS                : 41
MINUSTHAN            : 39 44
MORETHAN             : 38
NEW                  : 
PACKAGE              : 
PERIOD               : 81 82
PI                   : 
PLUS                 : 42 44 44
POW                  : 
PRINT                : 
PRINTF               : 82
PRINTLN              : 81
PUSH                 : 63
RBRACKETS            : 54 57 60 62
RCURLY               : 44 45 46 47 47 54 57 61 62 63 64 65 68
RETURN               : 31 63 64 68 87 88 89
RPAREN               : 44 63 63 64 65 65 68 72 73 81 82
STACK                : 60 61 62 63 63
STR                  : 4 76 83
STRUCT               : 62
SWITCH               : 45
TIMES                : 43
TWODOTS              : 16 90 91 92
TYPE                 : 60 61 62
VAR                  : 74 75 76
WHILE                : 
XCENTAGE             : 
error                : 

Nonterminals, with rules where they appear

argument             : 85 86
arguments            : 81 82 86
array                : 13
case_statements      : 26 91
comparator           : 32 33 35 36
constant_declaration : 27
consulta             : 10
declaration          : 22
defer_statement      : 25
elemArray            : 54 56
elemSlice            : 57 59
expression           : 46 47 87
func_declaration     : 19
funcion              : 12
line                 : 6 7 16 90 91 92 93
list_function        : 28 35 36
mathExp              : 79 80
mathExpProd          : 15 80
number               : 55 56 58 59 75 77 78 78 95
operator             : 78 80
param                : 69 70
param_list           : 68 70 72
pila                 : 18
program              : 0
push                 : 11
repeatLines          : 1 7 44 45 64 65 68
retorno              : 21 31
return               : 24
return_types         : 65
sentence             : 23 51 89
slice                : 14
stamentFor           : 9
statement            : 48 49
statements           : 46 47 47 49
switch               : 17
value                : 8 62 64 71
variablenum          : 94

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . repeatLines
    (6) repeatLines -> . line
    (7) repeatLines -> . line repeatLines
    (8) line -> . ID EQUALSVAR value
    (9) line -> . stamentFor
    (10) line -> . consulta
    (11) line -> . push
    (12) line -> . funcion
    (13) line -> . array
    (14) line -> . slice
    (15) line -> . mathExpProd
    (16) line -> . CASE INT TWODOTS line
    (17) line -> . switch
    (18) line -> . pila
    (19) line -> . func_declaration
    (20) line -> . ID EQUALSVAR INT
    (21) line -> . retorno
    (22) line -> . declaration
    (23) line -> . sentence
    (24) line -> . return
    (25) line -> . defer_statement
    (26) line -> . case_statements
    (27) line -> . constant_declaration
    (28) line -> . list_function
    (44) stamentFor -> . FOR ID EQUALS INT DOTCOMA ID MINUSTHAN LEN LPAREN ID RPAREN DOTCOMA ID PLUS PLUS LCURLY repeatLines RCURLY
    (46) consulta -> . IF expression LCURLY statements RCURLY
    (47) consulta -> . IF expression LCURLY statements RCURLY ELSE LCURLY statements RCURLY
    (63) push -> . FUNC PUSH LPAREN ID STACK COMMA ID ID RPAREN STACK LCURLY RETURN APPEND LPAREN ID COMMA ID RPAREN RCURLY
    (64) funcion -> . FUNC value LPAREN RPAREN ID LCURLY repeatLines RETURN ID RCURLY
    (68) funcion -> . FUNC ID LPAREN param_list RPAREN ID LCURLY repeatLines RETURN ID RCURLY
    (54) array -> . ID EQUALSVAR LBRACKETS INT RBRACKETS ID LCURLY elemArray RCURLY
    (57) slice -> . ID EQUALSVAR LBRACKETS RBRACKETS ID LCURLY elemSlice RCURLY
    (79) mathExpProd -> . mathExp
    (80) mathExpProd -> . mathExp operator mathExpProd
    (45) switch -> . SWITCH ID LCURLY repeatLines RCURLY
    (60) pila -> . TYPE STACK LBRACKETS RBRACKETS ID
    (61) pila -> . TYPE STACK INTERFACE LCURLY RCURLY
    (62) pila -> . TYPE STACK STRUCT LCURLY ID LBRACKETS RBRACKETS value RCURLY
    (65) func_declaration -> . FUNC ID LPAREN RPAREN LPAREN return_types RPAREN LCURLY repeatLines RCURLY
    (29) retorno -> . ID
    (30) retorno -> . ID COMMA
    (31) retorno -> . RETURN retorno
    (74) declaration -> . VAR ID ID
    (75) declaration -> . VAR ID ID EQUALSVAR number
    (76) declaration -> . VAR ID ID EQUALSVAR STR
    (81) sentence -> . FMT PERIOD PRINTLN LPAREN arguments RPAREN
    (82) sentence -> . FMT PERIOD PRINTF LPAREN arguments RPAREN
    (87) return -> . RETURN expression
    (88) return -> . RETURN INT
    (89) return -> . RETURN sentence
    (93) defer_statement -> . DEFER line
    (90) case_statements -> . CASE INT TWODOTS line
    (91) case_statements -> . CASE INT TWODOTS line case_statements
    (92) case_statements -> . DEFAULT TWODOTS line
    (94) constant_declaration -> . CONST variablenum
    (72) list_function -> . ID LPAREN param_list RPAREN
    (73) list_function -> . LEN LPAREN ID RPAREN
    (77) mathExp -> . number
    (78) mathExp -> . number operator number
    (52) number -> . INT
    (53) number -> . FLOAT

    ID              shift and go to state 4
    CASE            shift and go to state 12
    FOR             shift and go to state 25
    IF              shift and go to state 27
    FUNC            shift and go to state 28
    SWITCH          shift and go to state 31
    TYPE            shift and go to state 32
    RETURN          shift and go to state 29
    VAR             shift and go to state 33
    FMT             shift and go to state 35
    DEFER           shift and go to state 36
    DEFAULT         shift and go to state 37
    CONST           shift and go to state 38
    LEN             shift and go to state 26
    INT             shift and go to state 13
    FLOAT           shift and go to state 39

    program                        shift and go to state 1
    repeatLines                    shift and go to state 2
    line                           shift and go to state 3
    stamentFor                     shift and go to state 5
    consulta                       shift and go to state 6
    push                           shift and go to state 7
    funcion                        shift and go to state 8
    array                          shift and go to state 9
    slice                          shift and go to state 10
    mathExpProd                    shift and go to state 11
    switch                         shift and go to state 14
    pila                           shift and go to state 15
    func_declaration               shift and go to state 16
    retorno                        shift and go to state 17
    declaration                    shift and go to state 18
    sentence                       shift and go to state 19
    return                         shift and go to state 20
    defer_statement                shift and go to state 21
    case_statements                shift and go to state 22
    constant_declaration           shift and go to state 23
    list_function                  shift and go to state 24
    mathExp                        shift and go to state 30
    number                         shift and go to state 34

state 1

    (0) S' -> program .



state 2

    (1) program -> repeatLines .

    $end            reduce using rule 1 (program -> repeatLines .)


state 3

    (6) repeatLines -> line .
    (7) repeatLines -> line . repeatLines
    (6) repeatLines -> . line
    (7) repeatLines -> . line repeatLines
    (8) line -> . ID EQUALSVAR value
    (9) line -> . stamentFor
    (10) line -> . consulta
    (11) line -> . push
    (12) line -> . funcion
    (13) line -> . array
    (14) line -> . slice
    (15) line -> . mathExpProd
    (16) line -> . CASE INT TWODOTS line
    (17) line -> . switch
    (18) line -> . pila
    (19) line -> . func_declaration
    (20) line -> . ID EQUALSVAR INT
    (21) line -> . retorno
    (22) line -> . declaration
    (23) line -> . sentence
    (24) line -> . return
    (25) line -> . defer_statement
    (26) line -> . case_statements
    (27) line -> . constant_declaration
    (28) line -> . list_function
    (44) stamentFor -> . FOR ID EQUALS INT DOTCOMA ID MINUSTHAN LEN LPAREN ID RPAREN DOTCOMA ID PLUS PLUS LCURLY repeatLines RCURLY
    (46) consulta -> . IF expression LCURLY statements RCURLY
    (47) consulta -> . IF expression LCURLY statements RCURLY ELSE LCURLY statements RCURLY
    (63) push -> . FUNC PUSH LPAREN ID STACK COMMA ID ID RPAREN STACK LCURLY RETURN APPEND LPAREN ID COMMA ID RPAREN RCURLY
    (64) funcion -> . FUNC value LPAREN RPAREN ID LCURLY repeatLines RETURN ID RCURLY
    (68) funcion -> . FUNC ID LPAREN param_list RPAREN ID LCURLY repeatLines RETURN ID RCURLY
    (54) array -> . ID EQUALSVAR LBRACKETS INT RBRACKETS ID LCURLY elemArray RCURLY
    (57) slice -> . ID EQUALSVAR LBRACKETS RBRACKETS ID LCURLY elemSlice RCURLY
    (79) mathExpProd -> . mathExp
    (80) mathExpProd -> . mathExp operator mathExpProd
    (45) switch -> . SWITCH ID LCURLY repeatLines RCURLY
    (60) pila -> . TYPE STACK LBRACKETS RBRACKETS ID
    (61) pila -> . TYPE STACK INTERFACE LCURLY RCURLY
    (62) pila -> . TYPE STACK STRUCT LCURLY ID LBRACKETS RBRACKETS value RCURLY
    (65) func_declaration -> . FUNC ID LPAREN RPAREN LPAREN return_types RPAREN LCURLY repeatLines RCURLY
    (29) retorno -> . ID
    (30) retorno -> . ID COMMA
    (31) retorno -> . RETURN retorno
    (74) declaration -> . VAR ID ID
    (75) declaration -> . VAR ID ID EQUALSVAR number
    (76) declaration -> . VAR ID ID EQUALSVAR STR
    (81) sentence -> . FMT PERIOD PRINTLN LPAREN arguments RPAREN
    (82) sentence -> . FMT PERIOD PRINTF LPAREN arguments RPAREN
    (87) return -> . RETURN expression
    (88) return -> . RETURN INT
    (89) return -> . RETURN sentence
    (93) defer_statement -> . DEFER line
    (90) case_statements -> . CASE INT TWODOTS line
    (91) case_statements -> . CASE INT TWODOTS line case_statements
    (92) case_statements -> . DEFAULT TWODOTS line
    (94) constant_declaration -> . CONST variablenum
    (72) list_function -> . ID LPAREN param_list RPAREN
    (73) list_function -> . LEN LPAREN ID RPAREN
    (77) mathExp -> . number
    (78) mathExp -> . number operator number
    (52) number -> . INT
    (53) number -> . FLOAT

  ! shift/reduce conflict for RETURN resolved as shift
    $end            reduce using rule 6 (repeatLines -> line .)
    RCURLY          reduce using rule 6 (repeatLines -> line .)
    ID              shift and go to state 4
    CASE            shift and go to state 12
    FOR             shift and go to state 25
    IF              shift and go to state 27
    FUNC            shift and go to state 28
    SWITCH          shift and go to state 31
    TYPE            shift and go to state 32
    RETURN          shift and go to state 29
    VAR             shift and go to state 33
    FMT             shift and go to state 35
    DEFER           shift and go to state 36
    DEFAULT         shift and go to state 37
    CONST           shift and go to state 38
    LEN             shift and go to state 26
    INT             shift and go to state 13
    FLOAT           shift and go to state 39

  ! RETURN          [ reduce using rule 6 (repeatLines -> line .) ]

    line                           shift and go to state 3
    repeatLines                    shift and go to state 40
    stamentFor                     shift and go to state 5
    consulta                       shift and go to state 6
    push                           shift and go to state 7
    funcion                        shift and go to state 8
    array                          shift and go to state 9
    slice                          shift and go to state 10
    mathExpProd                    shift and go to state 11
    switch                         shift and go to state 14
    pila                           shift and go to state 15
    func_declaration               shift and go to state 16
    retorno                        shift and go to state 17
    declaration                    shift and go to state 18
    sentence                       shift and go to state 19
    return                         shift and go to state 20
    defer_statement                shift and go to state 21
    case_statements                shift and go to state 22
    constant_declaration           shift and go to state 23
    list_function                  shift and go to state 24
    mathExp                        shift and go to state 30
    number                         shift and go to state 34

state 4

    (8) line -> ID . EQUALSVAR value
    (20) line -> ID . EQUALSVAR INT
    (54) array -> ID . EQUALSVAR LBRACKETS INT RBRACKETS ID LCURLY elemArray RCURLY
    (57) slice -> ID . EQUALSVAR LBRACKETS RBRACKETS ID LCURLY elemSlice RCURLY
    (29) retorno -> ID .
    (30) retorno -> ID . COMMA
    (72) list_function -> ID . LPAREN param_list RPAREN

    EQUALSVAR       shift and go to state 41
    ID              reduce using rule 29 (retorno -> ID .)
    CASE            reduce using rule 29 (retorno -> ID .)
    FOR             reduce using rule 29 (retorno -> ID .)
    IF              reduce using rule 29 (retorno -> ID .)
    FUNC            reduce using rule 29 (retorno -> ID .)
    SWITCH          reduce using rule 29 (retorno -> ID .)
    TYPE            reduce using rule 29 (retorno -> ID .)
    RETURN          reduce using rule 29 (retorno -> ID .)
    VAR             reduce using rule 29 (retorno -> ID .)
    FMT             reduce using rule 29 (retorno -> ID .)
    DEFER           reduce using rule 29 (retorno -> ID .)
    DEFAULT         reduce using rule 29 (retorno -> ID .)
    CONST           reduce using rule 29 (retorno -> ID .)
    LEN             reduce using rule 29 (retorno -> ID .)
    INT             reduce using rule 29 (retorno -> ID .)
    FLOAT           reduce using rule 29 (retorno -> ID .)
    $end            reduce using rule 29 (retorno -> ID .)
    RCURLY          reduce using rule 29 (retorno -> ID .)
    COMMA           shift and go to state 42
    LPAREN          shift and go to state 43


state 5

    (9) line -> stamentFor .

    ID              reduce using rule 9 (line -> stamentFor .)
    CASE            reduce using rule 9 (line -> stamentFor .)
    FOR             reduce using rule 9 (line -> stamentFor .)
    IF              reduce using rule 9 (line -> stamentFor .)
    FUNC            reduce using rule 9 (line -> stamentFor .)
    SWITCH          reduce using rule 9 (line -> stamentFor .)
    TYPE            reduce using rule 9 (line -> stamentFor .)
    RETURN          reduce using rule 9 (line -> stamentFor .)
    VAR             reduce using rule 9 (line -> stamentFor .)
    FMT             reduce using rule 9 (line -> stamentFor .)
    DEFER           reduce using rule 9 (line -> stamentFor .)
    DEFAULT         reduce using rule 9 (line -> stamentFor .)
    CONST           reduce using rule 9 (line -> stamentFor .)
    LEN             reduce using rule 9 (line -> stamentFor .)
    INT             reduce using rule 9 (line -> stamentFor .)
    FLOAT           reduce using rule 9 (line -> stamentFor .)
    $end            reduce using rule 9 (line -> stamentFor .)
    RCURLY          reduce using rule 9 (line -> stamentFor .)


state 6

    (10) line -> consulta .

    ID              reduce using rule 10 (line -> consulta .)
    CASE            reduce using rule 10 (line -> consulta .)
    FOR             reduce using rule 10 (line -> consulta .)
    IF              reduce using rule 10 (line -> consulta .)
    FUNC            reduce using rule 10 (line -> consulta .)
    SWITCH          reduce using rule 10 (line -> consulta .)
    TYPE            reduce using rule 10 (line -> consulta .)
    RETURN          reduce using rule 10 (line -> consulta .)
    VAR             reduce using rule 10 (line -> consulta .)
    FMT             reduce using rule 10 (line -> consulta .)
    DEFER           reduce using rule 10 (line -> consulta .)
    DEFAULT         reduce using rule 10 (line -> consulta .)
    CONST           reduce using rule 10 (line -> consulta .)
    LEN             reduce using rule 10 (line -> consulta .)
    INT             reduce using rule 10 (line -> consulta .)
    FLOAT           reduce using rule 10 (line -> consulta .)
    $end            reduce using rule 10 (line -> consulta .)
    RCURLY          reduce using rule 10 (line -> consulta .)


state 7

    (11) line -> push .

    ID              reduce using rule 11 (line -> push .)
    CASE            reduce using rule 11 (line -> push .)
    FOR             reduce using rule 11 (line -> push .)
    IF              reduce using rule 11 (line -> push .)
    FUNC            reduce using rule 11 (line -> push .)
    SWITCH          reduce using rule 11 (line -> push .)
    TYPE            reduce using rule 11 (line -> push .)
    RETURN          reduce using rule 11 (line -> push .)
    VAR             reduce using rule 11 (line -> push .)
    FMT             reduce using rule 11 (line -> push .)
    DEFER           reduce using rule 11 (line -> push .)
    DEFAULT         reduce using rule 11 (line -> push .)
    CONST           reduce using rule 11 (line -> push .)
    LEN             reduce using rule 11 (line -> push .)
    INT             reduce using rule 11 (line -> push .)
    FLOAT           reduce using rule 11 (line -> push .)
    $end            reduce using rule 11 (line -> push .)
    RCURLY          reduce using rule 11 (line -> push .)


state 8

    (12) line -> funcion .

    ID              reduce using rule 12 (line -> funcion .)
    CASE            reduce using rule 12 (line -> funcion .)
    FOR             reduce using rule 12 (line -> funcion .)
    IF              reduce using rule 12 (line -> funcion .)
    FUNC            reduce using rule 12 (line -> funcion .)
    SWITCH          reduce using rule 12 (line -> funcion .)
    TYPE            reduce using rule 12 (line -> funcion .)
    RETURN          reduce using rule 12 (line -> funcion .)
    VAR             reduce using rule 12 (line -> funcion .)
    FMT             reduce using rule 12 (line -> funcion .)
    DEFER           reduce using rule 12 (line -> funcion .)
    DEFAULT         reduce using rule 12 (line -> funcion .)
    CONST           reduce using rule 12 (line -> funcion .)
    LEN             reduce using rule 12 (line -> funcion .)
    INT             reduce using rule 12 (line -> funcion .)
    FLOAT           reduce using rule 12 (line -> funcion .)
    $end            reduce using rule 12 (line -> funcion .)
    RCURLY          reduce using rule 12 (line -> funcion .)


state 9

    (13) line -> array .

    ID              reduce using rule 13 (line -> array .)
    CASE            reduce using rule 13 (line -> array .)
    FOR             reduce using rule 13 (line -> array .)
    IF              reduce using rule 13 (line -> array .)
    FUNC            reduce using rule 13 (line -> array .)
    SWITCH          reduce using rule 13 (line -> array .)
    TYPE            reduce using rule 13 (line -> array .)
    RETURN          reduce using rule 13 (line -> array .)
    VAR             reduce using rule 13 (line -> array .)
    FMT             reduce using rule 13 (line -> array .)
    DEFER           reduce using rule 13 (line -> array .)
    DEFAULT         reduce using rule 13 (line -> array .)
    CONST           reduce using rule 13 (line -> array .)
    LEN             reduce using rule 13 (line -> array .)
    INT             reduce using rule 13 (line -> array .)
    FLOAT           reduce using rule 13 (line -> array .)
    $end            reduce using rule 13 (line -> array .)
    RCURLY          reduce using rule 13 (line -> array .)


state 10

    (14) line -> slice .

    ID              reduce using rule 14 (line -> slice .)
    CASE            reduce using rule 14 (line -> slice .)
    FOR             reduce using rule 14 (line -> slice .)
    IF              reduce using rule 14 (line -> slice .)
    FUNC            reduce using rule 14 (line -> slice .)
    SWITCH          reduce using rule 14 (line -> slice .)
    TYPE            reduce using rule 14 (line -> slice .)
    RETURN          reduce using rule 14 (line -> slice .)
    VAR             reduce using rule 14 (line -> slice .)
    FMT             reduce using rule 14 (line -> slice .)
    DEFER           reduce using rule 14 (line -> slice .)
    DEFAULT         reduce using rule 14 (line -> slice .)
    CONST           reduce using rule 14 (line -> slice .)
    LEN             reduce using rule 14 (line -> slice .)
    INT             reduce using rule 14 (line -> slice .)
    FLOAT           reduce using rule 14 (line -> slice .)
    $end            reduce using rule 14 (line -> slice .)
    RCURLY          reduce using rule 14 (line -> slice .)


state 11

    (15) line -> mathExpProd .

    ID              reduce using rule 15 (line -> mathExpProd .)
    CASE            reduce using rule 15 (line -> mathExpProd .)
    FOR             reduce using rule 15 (line -> mathExpProd .)
    IF              reduce using rule 15 (line -> mathExpProd .)
    FUNC            reduce using rule 15 (line -> mathExpProd .)
    SWITCH          reduce using rule 15 (line -> mathExpProd .)
    TYPE            reduce using rule 15 (line -> mathExpProd .)
    RETURN          reduce using rule 15 (line -> mathExpProd .)
    VAR             reduce using rule 15 (line -> mathExpProd .)
    FMT             reduce using rule 15 (line -> mathExpProd .)
    DEFER           reduce using rule 15 (line -> mathExpProd .)
    DEFAULT         reduce using rule 15 (line -> mathExpProd .)
    CONST           reduce using rule 15 (line -> mathExpProd .)
    LEN             reduce using rule 15 (line -> mathExpProd .)
    INT             reduce using rule 15 (line -> mathExpProd .)
    FLOAT           reduce using rule 15 (line -> mathExpProd .)
    $end            reduce using rule 15 (line -> mathExpProd .)
    RCURLY          reduce using rule 15 (line -> mathExpProd .)


state 12

    (16) line -> CASE . INT TWODOTS line
    (90) case_statements -> CASE . INT TWODOTS line
    (91) case_statements -> CASE . INT TWODOTS line case_statements

    INT             shift and go to state 44


state 13

    (52) number -> INT .
